[package]
name = "laron-primitives"
description = "Ethereum primitives for Rust"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/laron-tech/primitives"
keywords = ["ethereum", "primitives"]
version = "0.1.0"
authors = ["Ade M Ramdani <curiousdev04@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
